overflow fix-2

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -16,7 +16,11 @@
 	font-family: "Montserrat", sans-serif;
 	font-style: normal;
 }
+html {
+	scroll-behavior: smooth;
+}
 
+html,
 body {
 	overflow-x: hidden;
 }
